[package]
name = "hello"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11"
dotenv = "0.15"
serde_json = "1.0"
tokio-postgres = "0.7.10"
tokio = { version = "1.32.0", features = ["full"] }
http = "0.2.9"

actix-web = "4"
deadpool-postgres = "0.10"
serde = { version = "1", features = ["derive"] }
uuid = { version = "1.4", features = ["v4", "fast-rng"] }
chrono = "0.4"
deadpool-redis = { version = "0.12", features = ["serde"] }
config = "0.13.3"
futures = "0.3"
deadqueue = "0.2"
sql-builder = "3.1"